--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
-# Database configs:
+# Typo3:
+TYPO3_CONTEXT=Development
+
+# Database:
 DB_HOST=
 DB_NAME=
 DB_USER=
 DB_PASS=
 DB_PORT=3306
+
+# Solr:
+SOLR_SCHEME=https
+SOLR_HOST=localhost
+SOLR_PORT=8983
