--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
 	"type": "module",
 	"private": true,
 	"scripts": {
-		"spellcheck": "cspell -c config/.cspell.json '**' --quiet --color",
+		"spellcheck": "cspell -c config/utils/.cspell.json '**' --quiet --color",
 		"lint:format": "prettier ext !**/pnpm-lock.yaml -c --cache --no-error-on-unmatched-pattern --color",
 		"lint:format:fix": "prettier ext !**/pnpm-lock.yaml -wl --cache --no-error-on-unmatched-pattern"
 	},
 	"devDependencies": {
-		"cspell": "^8.14.4",
+		"cspell": "^8.15.4",
 		"prettier": "^3.3.3"
 	},
-	"packageManager": "pnpm@9.10.0",
+	"packageManager": "pnpm@9.12.2",
 	"engines": {
 		"pnpm": ">=9",
 		"node": ">=20"
