--- a/taskfile.yml
+++ b/taskfile.yml
@@ -7,7 +7,7 @@ env:
   COMPOSER_BIN: '{{.COMPOSER_BIN | default "$(which composer)"}}'
 
 vars:
-  CONFIG_DIR: '{{.TASKFILE_DIR}}/config'
+  CONFIG_DIR: '{{.TASKFILE_DIR}}/config/utils'
   NODEJS_BIN_DIR: '{{.TASKFILE_DIR}}/node_modules/.bin'
   COMPOSER_BIN_DIR: '{{.TASKFILE_DIR}}/vendor/bin'
 
