Update gtat config

--- a/.github/workflows/cd-gh-pages.yml
+++ b/.github/workflows/cd-gh-pages.yml
@@ -71,6 +71,8 @@ jobs:
 
       - name: ⚡️ Build site with VitePress
         run: pnpm notes:build
+        env:
+          VITE_GTAG: ${{ vars.VITE_GTAG }}
 
       - name: 📤 Upload artifact
         uses: actions/upload-pages-artifact@v3
